--- a/css/application.css
+++ b/css/application.css
@@ -2,7 +2,7 @@
 	GLOBAL
 *********/
 body {
-	background: whiteSmoke;
+	background: #fff;
 }
 
 
@@ -11,6 +11,14 @@ body {
 *********/
 .well-white {
 	background: #fff;
+}
+
+.last {
+	margin-bottom: 0 !important;
+}
+
+.text-right {
+	text-align: right;
 }
 
 
@@ -57,7 +65,12 @@ body {
 		
 		#info-bar .stats h5 {
 			margin: 0;
-		}
+			}
+			
+			#info-bar .stats h5 span {
+				font-size: 12px;
+				font-weight: normal;
+			}
 		
 		#info-bar .stats label, #info-bar .stats p {
 			font-size: 12px;
@@ -104,6 +117,39 @@ body {
 		 -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
 			  box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
 	}
+		
+
+
+/*******************************************
+	LOGIN
+*********/
+#login-form h4 span {
+	font-size: 14px;
+	font-weight: normal;
+}
+
+/*******************************************
+	HOME
+*********/
+.home #login-form {}
+	
+	.home #login-form input[type=text],
+	.home #login-form input[type=password] {
+		width: 240px;
+	}
+
+
+/*******************************************
+	FOOTER
+*********/
+#footer {
+	background: whiteSmoke;
+	border-top:1px solid #e3e3e3;
+	margin-top: 100px;
+	padding:20px 0 60px;
+}
+
+
 
 
 
