--- a/includes/_head.html
+++ b/includes/_head.html
@@ -6,5 +6,7 @@
 		<link rel="stylesheet" href="css/application.css" />
 		<script type="text/ecmascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 		<script type="text/ecmascript" src="js/bootstrap.min.js"></script>
+		<script type="text/ecmascript" src="js/highcharts/highcharts.js"></script>
+		<script type="text/ecmascript" src="js/highcharts/themes/eclipse-mc.js"></script>
 		<script type="text/ecmascript" src="js/application.js"></script>
 	</head>
