--- a/includes/_navigation.html
+++ b/includes/_navigation.html
@@ -2,7 +2,7 @@
 			<div class="navbar" id="navigation">
 				<div class="navbar-inner">
 					<ul class="nav">
-						<li><a href="index.shtml">Home</a></li>
+						<li><a href="/">Home</a></li>
 						<li><a href="account.shtml">Account</a></li>
 						<li><a href="statistics.shtml">Statistics</a></li>
 						<li><a href="top-miners.shtml">Top Miners</a></li>
