--- a/includes/_footer.html
+++ b/includes/_footer.html
@@ -1,8 +1,8 @@
 		<div id="footer">
-			<div class="container">
+			<div class="container-fluid">
 	
 				
-				<div class="row">
+				<div class="row-fluid">
 					<div class="span6">
 						<p>&copy; Eclipse Mining Consotium. All Rights Reserved.</p>
 					</div>
